
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {int dummy; } ;


 int err (int,char*) ;
 struct hostent* gethostbyaddr (char const*,int,int) ;

struct hostent *
xgethostbyaddr (const char *addr, int len, int type)
{
        struct hostent *tmp;

        tmp = gethostbyaddr (addr, len, type);
        if (tmp == ((void*)0))
                err(1,"cannot gethostbyaddr");

        return (tmp);
}
